# orbitherm-studio

./: InitGui.py  README.md  __init__.py  pyproject.toml
.cursor/rules/: modeling_core_rules.md  thermalanalysis_rules.md
Macros/: DefeaturingHolesAndFillets.FCMacro  README_Defeaturing.md
bridge/: __init__.py  exporter.py  orbit_heat_bridge.py
docs/: display_parameters_memo.md  module_structure.md  thermal_analysis_restructure_plan.md  workbench_roadmap_v0.1.md
gui/: __init__.py  commands.py  orbit_gui.py  orbit_step_dialog.py  panels.py
modeling/: __init__.py  calculation.py  core.py  defeaturing.py  freecad_utils.py  gui_panels.py  materials.json  materials.py  radiation_worker.py
orbit_heat/: __init__.py  orbit_attitude.py  orbit_core.py  orbit_gui.py  orbit_heat_bridge.py  orbit_radiation.py  orbit_step_dialog.py  orbit_tle_presets.json  orbit_visualization.py
post/: __init__.py  display_labels.py
solver/: __init__.py
